--- a/public/class.html
+++ b/public/class.html
@@ -17,6 +17,11 @@
     <script src="assets/js/respond.min.js"></script>
   <![endif]-->
   <link rel="shortcut icon" href="favicon.png">
+  <style>
+    .challenge {
+      width: 750px;
+    }
+  </style>
 </head>
 
 <body id="home" data-spy="scroll" data-target=".navbar">
@@ -64,7 +69,7 @@
           <h4>Challenge 1</h4>
           <img src="http://i.imgur.com/MYnZ1W2.png" alt="">
           <br><br>
-          <p><a href="http://thimble.webmaker.com">Link to Thimble</a></p>
+          <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
           <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
 
           <h3>Lists</h3>
@@ -75,7 +80,7 @@
           <h4>Challenge 2</h4>
           <img src="http://i.imgur.com/f3QNr5T.png" alt="">
           <br><br>
-          <p><a href="http://thimble.webmaker.com">Link to Thimble</a></p>
+          <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
           <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
 
           <h3>Ids and Classes</h3>
@@ -84,7 +89,27 @@
           <h4>Challenge 3</h4>
           <img src="http://i.imgur.com/Dqe96Lp.png" alt="">
           <br><br>
-          <p><a href="http://thimble.webmaker.com">Link to Thimble</a></p>
+          <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
+          <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
+
+          <h3>Divs and Margins</h3>
+          <p class="lead">Divs are one of the most used HTML elements. Here's an introduction on what they do!</p>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/DcAbEdS1n_8?rel=0" frameborder="0" allowfullscreen></iframe>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/mPO3pBt2Nxg?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>Challenge 4</h4>
+          <img class="challenge" src="http://i.imgur.com/fp3VrwV.png" alt="">
+          <br><br>
+          <h4>Challenge 5</h4>
+          <img class="challenge" src="http://i.imgur.com/tfoedgf.png" alt="">
+          <br><br>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/qaoA0pxxzu4?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>Challenge 6</h4>
+          <img class="challenge" src="http://i.imgur.com/wsmZmqo.png" alt="">
+          <br><br>
+          <h4>Challenge 7</h4>
+          <img class="challenge" src="http://i.imgur.com/2gxzdbK.png" alt="">
+          <br><br>
+          <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
           <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
 
         </div>
