added privacy policy

--- a/public/terms.html
+++ b/public/terms.html
@@ -63,6 +63,20 @@
 
           <h3>Non-Solicitation Agreement</h3>
           <p class="lead">By becoming a Mushroom Learning customer, you agree that you will not solicit for employment, hire, or engage as an independent contractor, or permit any organization directly or indirectly controlled by you to solicit for employment, hire, or engage as an independent contractor, any person employed by Mushroom Learning at any time during the term of Mushroom Learning's provision of services to you. Any additional services desired of a Mushroom Learning employee may be requested through Mushroom Learning at 424-244-9794.</p>
+
+          <h3>Privacy Policy</h3>
+
+          <p class="lead">This policy covers how we use your personal information. We take your privacy SERIOUSLY and will take all measures to protect your personal information.</p>
+
+          <p class="lead">What Information Do We Collect? We only collect information that we need that is related to your order. This includes your: Billing Address Shipping Address Email Address Credit Card Information In addition we also collect information on your IP address, browser type, and Refer URL data. We use this data to prevent hacking attempts, help us know what web browsers people are using, and find out where our visitors are coming from so that we can improve our marketing. </p>
+
+          <p class="lead">How Is My Information Used? Your information is only used to fill your order. We do not sell or redistribute your information to anyone.</p>
+
+          <p class="lead">Security and Storage Only your order data billing, shipping, and order contents data is stored on our server. This information is encrypted using a Secure Sockets Layer before it is transmitted over a web server. We do not store your Credit Card data.</p>
+
+          <p class="lead">Cookies and Browser Information Cookies are small files that reside on your computer and allow us to recognize you on your next visit or store your shopping cart contents. We use them only to track this information.</p>
+
+
         </div>
       </div>
     </div>
