update to privacy policy

--- a/public/terms.html
+++ b/public/terms.html
@@ -66,15 +66,15 @@
 
           <h3>Privacy Policy</h3>
 
-          <p class="lead">This policy covers how we use your personal information. We take your privacy SERIOUSLY and will take all measures to protect your personal information.</p>
+          <p class="lead">This policy covers how we use your personal information. We take your privacy seriously and will take all measures to protect your personal information.</p>
 
-          <p class="lead">What Information Do We Collect? We only collect information that we need that is related to your order. This includes your: Billing Address Shipping Address Email Address Credit Card Information In addition we also collect information on your IP address, browser type, and Refer URL data. We use this data to prevent hacking attempts, help us know what web browsers people are using, and find out where our visitors are coming from so that we can improve our marketing. </p>
+          <p class="lead"><strong>What Information Do We Collect?</strong> We only collect information that we need that is related to your order. This includes your: Billing Address, Email Address, and Credit Card Information. In addition we also collect information on your IP address, browser type, and Refer URL data. We use this data to prevent hacking attempts, help us know what web browsers people are using, and find out where our visitors are coming from so that we can improve our marketing. </p>
 
-          <p class="lead">How Is My Information Used? Your information is only used to fill your order. We do not sell or redistribute your information to anyone.</p>
+          <p class="lead"><strong>How Is My Information Used?</strong> Your information is only used to fill your order. We do not sell or redistribute your information to anyone.</p>
 
-          <p class="lead">Security and Storage Only your order data billing, shipping, and order contents data is stored on our server. This information is encrypted using a Secure Sockets Layer before it is transmitted over a web server. We do not store your Credit Card data.</p>
+          <p class="lead"><strong>Security and Storage</strong> Only your order data billing, shipping, and order contents data is stored on our server. This information is encrypted using a Secure Sockets Layer before it is transmitted over a web server. We do not store your Credit Card data.</p>
 
-          <p class="lead">Cookies and Browser Information Cookies are small files that reside on your computer and allow us to recognize you on your next visit or store your shopping cart contents. We use them only to track this information.</p>
+          <p class="lead"><strong>Cookies and Browser Information</strong> Cookies are small files that reside on your computer and allow us to recognize you on your next visit or store your shopping cart contents. We use them only to track this information.</p>
 
 
         </div>
