adding floats and padding

--- a/public/class.html
+++ b/public/class.html
@@ -106,8 +106,28 @@
           <h4>Challenge 6</h4>
           <img class="challenge" src="http://i.imgur.com/wsmZmqo.png" alt="">
           <br><br>
+          <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
+          <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
+
+          <h3>Floats and Padding</h3>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/PCOJAqg8ZrA?rel=0" frameborder="0" allowfullscreen></iframe>
           <h4>Challenge 7</h4>
+          <img class="challenge" src="http://i.imgur.com/5J8eugh.png" alt="">
+          <br><br>
+          <h4>Challenge 8</h4>
           <img class="challenge" src="http://i.imgur.com/2gxzdbK.png" alt="">
+          <br><br>
+          <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
+          <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/KU2z2F9R310?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>Challenge 9</h4>
+          <img class="challenge" src="http://i.imgur.com/hqlcNUm.png" alt="">
+          <br><br>
+          <h4>Challenge 10</h4>
+          <img class="challenge" src="http://i.imgur.com/e2Y6v9T.png" alt="">
+          <br><br>
+          <h4>Challenge 11</h4>
+          <img class="challenge" src="http://i.imgur.com/6DkbWtv.png" alt="">
           <br><br>
           <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
           <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
