added park century workshop and class

--- a/public/classes.html
+++ b/public/classes.html
@@ -116,6 +116,12 @@
                     <td class="text-right"><button href="#myModal1" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
                   </tr>
                   <tr>
+                    <td class="td-valign">9/30/2014</td>
+                    <td class="td-valign">Tuesdays @ 3PM</td>
+                    <td class="td-valign">Park Century School (Park Century students only)</td>
+                    <td class="text-right"><button href="#myModal7" id="openBtn" data-toggle="modal" class="btn btn-default">More info</button></td>
+                  </tr>
+                  <tr>
                     <td class="td-valign">10/11/2014</td>
                     <td class="td-valign">Saturdays @ 10AM</td>
                     <td class="td-valign">Realm Academy</td>
@@ -549,6 +555,77 @@
                   </div>
                   <div class="modal-footer">
                     <a href="http://www.eventbrite.com/e/middle-school-coding-class-online-4-tickets-12788363339" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
+
+            <div class="modal fade" id="myModal7">
+              <div class="modal-dialog modal-custom">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                    <img src="assets/images/logo-side-2.png" alt="" id="class-modal-img">
+                  </div>
+                  <div class="modal-body">
+                    <h3>Schedule</h3>
+                    <table class="table table-striped" id="tblGrid">
+                      <thead id="tblHead">
+                        <tr>
+                          <th>Date</th>
+                          <th>Day</th>
+                          <th>Time (PDT)</th>
+                          <th>Location</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Sep 30</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Oct 7</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Oct 14</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Oct 21</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Oct 28</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Nov 4</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                        <tr>
+                          <td>Nov 11</td>
+                          <td>Tues</td>
+                          <td>3:00 - 4:30pm</td>
+                          <td><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School, 3939 Landmark St, Culver City, CA 90232</a></td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                  <div class="modal-footer">
+                    <a href="http://www.eventbrite.com/e/middle-school-coding-class-park-century-school-tickets-13029402293" class="btn btn-primary btn-large" target="_blank">Enroll now!</a>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
