--- a/public/workshops.html
+++ b/public/workshops.html
@@ -115,6 +115,12 @@
                     <td class="text-right"><a href="https://www.eventbrite.com/e/youth-coding-workshop-free-community-prep-academy-tickets-12788854809" class="btn btn-default" target="_blank">Enroll</a></td>
                   </tr>
                   <tr>
+                    <td class="td-valign">9/17/2014</td>
+                    <td class="td-valign">Wednesday 3:00 - 4:00PM</td>
+                    <td class="td-valign"><a href="https://goo.gl/maps/2jRYg" target="_blank">Park Century School (Park Century students only)</a></td>
+                    <td class="text-right"><a href="https://www.eventbrite.com/e/youth-coding-workshop-free-park-century-school-tickets-13029081333" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
                     <td class="td-valign">9/27/2014</td>
                     <td class="td-valign">Saturday 10:00 - 11:00AM</td>
                     <td class="td-valign"><a href="https://goo.gl/maps/zG2ZW" target="_blank">Realm Academy</a></td>
