added codio stuff

--- a/public/class.html
+++ b/public/class.html
@@ -72,6 +72,22 @@
           <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
           <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
 
+          <h3>Boilerplate</h3>
+          <p class="lead">First, set up your <a href="http://github.com" target="_blank">Github</a> profile.</p>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/O9VTcCHRkq4?rel=0" frameborder="0" allowfullscreen></iframe>
+          
+          <br>
+          <br>
+          <p class="lead">Now, create a <a href="http://www.codio.com" target="_blank">Codio</a> account.</p>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/ZcWSHtG4qNE?rel=0" frameborder="0" allowfullscreen></iframe>
+          <br>
+          <br>
+          <p class="lead">Once you create your Github and Codio accounts, <a href="mailto:muhammad@mushroomlearning.com?Subject=Github%20and%20Codio%20usernames">email me</a> the username for both accounts!</p>
+
+          <p class="lead">Finally, create a project using the boilerplate.</p>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/MLd7cBqdiQQ?rel=0" frameborder="0" allowfullscreen></iframe>
+          <p class="lead">URL of Git repository: https://github.com/mmeigooni/boilerplate.git</p>
+
           <h3>Lists</h3>
           <p class="lead">Watch the video below to learn how to make ordered and unordered lists.</p>
           <iframe width="640" height="480" src="http://www.youtube.com/embed/T1vx5sJeRPo?rel=0" frameborder="0" allowfullscreen></iframe>
