adding links and hover up to challenge 12

--- a/public/class.html
+++ b/public/class.html
@@ -148,6 +148,22 @@
           <p><a href="http://thimble.webmaker.org" target="_blank">Link to Thimble</a></p>
           <p>My email: <a href="mailto:muhammad@mushroomlearning.com?Subject=Challenge%20One">muhammad@mushroomlearning.com</a></p>
 
+          <h3>Links and Hover</h3>
+          <h4>Linking with a tags</h4>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/5vv8xRo0lf8?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>HTML only Boilerplate</h4>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/6OUh7hDeKo0?rel=0" frameborder="0" allowfullscreen></iframe>
+          <script src="https://gist.github.com/mmeigooni/132c87c70c76085c339c.js"></script>
+          <h4>Linking different pages</h4>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/ms3Mo9kw8aY?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>Hover</h4>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/hl-57BmHzOY?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>Challenge 12</h4>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/VaJidUdoi2w?rel=0" frameborder="0" allowfullscreen></iframe>
+          
+
+
+
         </div>
       </div>
     </div>
