adding relative positioning exercises

--- a/public/class.html
+++ b/public/class.html
@@ -160,7 +160,24 @@
           <iframe width="640" height="480" src="http://www.youtube.com/embed/hl-57BmHzOY?rel=0" frameborder="0" allowfullscreen></iframe>
           <h4>Challenge 12</h4>
           <iframe width="640" height="480" src="http://www.youtube.com/embed/VaJidUdoi2w?rel=0" frameborder="0" allowfullscreen></iframe>
-          
+
+          <h3>Relative Positioning</h3>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/b3pVlfczRrM?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h4>Challenge 13 -- do using relative position, not margins or padding!</h4>
+          <img class="challenge" src="http://i.imgur.com/tfoedgf.png" alt="">
+          <br><br>
+          <h4>Challenge 14 -- do using relative position, not margins or padding!</h4>
+          <img class="challenge" src="http://i.imgur.com/wsmZmqo.png" alt="">
+          <br><br>
+          <h4>Challenge 15 -- do using relative position, not margins or padding!</h4>
+          <img class="challenge" src="http://i.imgur.com/5J8eugh.png" alt="">
+          <br><br>
+          <h4>Challenge 16 -- do using relative position, not margins or padding!</h4>
+          <iframe width="640" height="480" src="http://www.youtube.com/embed/opChRUHKmwo?rel=0" frameborder="0" allowfullscreen></iframe>
+          <h3>Yearbook</h3>
+          <h4><a href="http://imgur.com/a/1KcNQ">Link to Pictures</a></h4>
+          <script src="https://gist.github.com/mmeigooni/31b81e1151511b25a978.js"></script>
+
 
 
 
