--- a/public/workshops.html
+++ b/public/workshops.html
@@ -139,6 +139,12 @@
                     <td class="text-right"><a href="http://www.eventbrite.com/e/youth-coding-workshop-free-online-tickets-12788618101" class="btn btn-default" target="_blank">Enroll</a></td>
                   </tr>
                   <tr>
+                    <td class="td-valign">10/20/2014</td>
+                    <td class="td-valign">Wednesday 4:00 - 5:00PM</td>
+                    <td class="td-valign"><a href="https://goo.gl/maps/zG2ZW" target="_blank">Realm Academy</a></td>
+                    <td class="text-right"><a href="http://www.eventbrite.com/e/youth-coding-workshop-free-realm-academy-tickets-12788798641" class="btn btn-default" target="_blank">Enroll</a></td>
+                  </tr>
+                  <tr>
                     <td class="td-valign">10/25/2014</td>
                     <td class="td-valign">Saturday 1:00 - 1:30PM</td>
                     <td class="td-valign">Live Online Workshop</td>
