--- a/public/class.html
+++ b/public/class.html
@@ -178,6 +178,16 @@
           <h4><a href="http://imgur.com/a/1KcNQ">Link to Pictures</a></h4>
           <script src="https://gist.github.com/mmeigooni/31b81e1151511b25a978.js"></script>
 
+          <h4>Challenge 17</h4>
+          <img src="http://i.imgur.com/vrwfMuu.png" alt="" class="long-img">
+          <br><br>
+          <p>Challenge 17 Notes</p>
+          <ul>
+            <li>There is one section, its background is orange</li>
+            <li>There are 5 rows, with alternating blue and white backgrounds</li>
+            <li>Make sure to use the section/container/row/col structure (outline below)</li>
+          </ul>
+          <script src="https://gist.github.com/mmeigooni/a9dbc9add361d09db23c.js"></script>
 
 
 
