--- a/public/class.html
+++ b/public/class.html
@@ -185,11 +185,19 @@
           <ul>
             <li>There is one section, its background is orange</li>
             <li>There are 5 rows, with alternating blue and white backgrounds</li>
+            <li>Each column has a height of 300px and a 5px solid black border</li>
             <li>Make sure to use the section/container/row/col structure (outline below)</li>
           </ul>
           <script src="https://gist.github.com/mmeigooni/a9dbc9add361d09db23c.js"></script>
 
-
+          <h4>Challenge 18</h4>
+          <img src="http://i.imgur.com/DyAfdAG.png" alt="" class="long-img">
+          <br><br>
+          <p>Challenge 18 Notes</p>
+          <ul>
+            <li>Hint: You can subdivide columns into more rows and columns!</li>
+            <li>Make sure to use the section/container/row/col structure!</li>
+          </ul>
 
         </div>
       </div>
