--- a/public/synergy.html
+++ b/public/synergy.html
@@ -2,14 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Dasky Timeline Slider Demo</title>
+<title>Mushroom Learning -- Synergy Quantum</title>
 <link rel="stylesheet" href="assets/styles/css/dasky.min.css" />
+<link rel="stylesheet" href="assets/styles/css/theme.css" />
 <script type="text/javascript" src="assets/js/jquery-1.10.1.min.js"></script>
 <script type="text/javascript" src="assets/js/jmpress.min.js"></script>
 <script type="text/javascript" src="assets/js/dasky.js"></script>
 <script type="text/javascript">
   $(function(){
-    $('#dasky').Dasky({autoplay:false});
+    $('#dasky').Dasky({autoplay:false,nav:false});
   });
 </script>
 <style type="text/css">
@@ -24,67 +25,149 @@
 </head>
 <body>
 <div id="dasky">
+  <img src="assets/images/logo.png" alt="Mushroom Learning Logo" id="timeline-logo"/>
   <div class="step year">
-    <div class="dsk-titlenode"> 2012 </div>
-    <div class="dsk-content">
-      <p class="dsk-year-info"> A Timeline Slider For You!  :) </p>
+    <div class="dsk-titlenode"> Welcome </div>
+    <div class="dsk-content" id="welcome">
+      <img src="assets/images/welcome.png" alt=""/>
+      <p class="dsk-year-info">Welcome to Mushroom Learning's Web Development course!</p>
+      <p class="dsk-year-info">If you have any questions, please email <a href="mailto:hello@mushroomlearning.com" target="_blank">hello@mushroomlearning.com</a></p>
     </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">05/01</div>
-    <h2 class="dsk-circle-title">Daskey Timeline Slider</h2>
+    <div class="dsk-circle">10/27</div>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Daskey Timeline Slider </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> </div>
-      <img src="images/1.png" alt="" /> </div>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/1.png" alt="" /> 
+    </div>
   </div>
   <div class="step">
-    <div class="dsk-circle">12/16</div>
-    <h2 class="dsk-circle-title">Stylish Appearance</h2>
+    <div class="dsk-circle">10/30</div>
+    <h2 class="dsk-circle-title">Class 2</h2>
     <div class="dsk-content">
       <div class="dsk-info">
         <h2>Stylish Appearance </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> </div>
-      <img src="images/2.png" alt="" /> </div>
-  </div>
-  <div class="step year">
-    <div class="dsk-titlenode"> 2013 </div>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">11/6</div>
+    <h2 class="dsk-circle-title">Class 3</h2>
     <div class="dsk-content">
-      <p class="dsk-year-info"> Use For Prouct Timeline , Showcase And So On! </p>
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">11/7</div>
+    <h2 class="dsk-circle-title">Class 4</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">11/13</div>
+    <h2 class="dsk-circle-title">Class 5</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">11/14</div>
+    <h2 class="dsk-circle-title">Class 6</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">11/20</div>
+    <h2 class="dsk-circle-title">Class 7</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">11/21</div>
+    <h2 class="dsk-circle-title">Class 8</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">12/4</div>
+    <h2 class="dsk-circle-title">Class 9</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">12/5</div>
+    <h2 class="dsk-circle-title">Class 10</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">12/11</div>
+    <h2 class="dsk-circle-title">Class 11</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
+    </div>
+  <div class="step">
+    <div class="dsk-circle">12/12</div>
+    <h2 class="dsk-circle-title">Class 12</h2>
+    <div class="dsk-content">
+      <div class="dsk-info">
+        <h2>Stylish Appearance </h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
+        <a href="#" class="dsk-link">Read More</a> 
+      </div>
+      <img src="images/2.png" alt="" /> 
     </div>
   </div>
-  <div class="step">
-    <div class="dsk-circle">01/20</div>
-    <h2 class="dsk-circle-title">Fallback To Old Browsers</h2>
-    <div class="dsk-content">
-      <div class="dsk-info">
-        <h2>Fallback To Old Browsers </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> </div>
-      <img src="images/3.png" alt="" /> </div>
-  </div>
-  <div class="step">
-    <div class="dsk-circle">07/15</div>
-    <h2 class="dsk-circle-title">CSS3 Animated</h2>
-    <div class="dsk-content">
-      <div class="dsk-info">
-        <h2>CSS3 Animated </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> </div>
-      <img src="images/4.png" alt="" /> </div>
-  </div>
-  <div class="step">
-    <div class="dsk-circle">11/03</div>
-    <h2 class="dsk-circle-title">Easy To Use</h2>
-    <div class="dsk-content">
-      <div class="dsk-info">
-        <h2>Easy To Use</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> </div>
-      <img src="images/5.png" alt="" /> </div>
+  
   </div>
 </div>
 </body>
