made headers and buttons mushroom green

--- a/public/synergy.html
+++ b/public/synergy.html
@@ -40,7 +40,8 @@
       <div class="dsk-info">
         <h2>Daskey Timeline Slider </h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Read More</a> 
+        <a href="#" class="dsk-link">Required</a> 
+        <a href="#" class="dsk-link">Extensions</a> 
       </div>
       <img src="images/1.png" alt="" /> 
     </div>
@@ -56,6 +57,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">11/6</div>
     <h2 class="dsk-circle-title">Class 3</h2>
@@ -67,6 +69,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">11/7</div>
     <h2 class="dsk-circle-title">Class 4</h2>
@@ -78,6 +81,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">11/13</div>
     <h2 class="dsk-circle-title">Class 5</h2>
@@ -89,6 +93,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">11/14</div>
     <h2 class="dsk-circle-title">Class 6</h2>
@@ -100,6 +105,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">11/20</div>
     <h2 class="dsk-circle-title">Class 7</h2>
@@ -111,6 +117,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">11/21</div>
     <h2 class="dsk-circle-title">Class 8</h2>
@@ -122,6 +129,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">12/4</div>
     <h2 class="dsk-circle-title">Class 9</h2>
@@ -133,6 +141,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">12/5</div>
     <h2 class="dsk-circle-title">Class 10</h2>
@@ -144,6 +153,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">12/11</div>
     <h2 class="dsk-circle-title">Class 11</h2>
@@ -155,6 +165,7 @@
       </div>
       <img src="images/2.png" alt="" /> 
     </div>
+  </div>
   <div class="step">
     <div class="dsk-circle">12/12</div>
     <h2 class="dsk-circle-title">Class 12</h2>
