--- a/public/synergy.html
+++ b/public/synergy.html
@@ -38,12 +38,12 @@
     <div class="dsk-circle">10/27</div>
     <div class="dsk-content">
       <div class="dsk-info">
-        <h2>Daskey Timeline Slider </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exerc...</p>
-        <a href="#" class="dsk-link">Required</a> 
+        <h2>Class 1 -- Getting Started</h2>
+        <p>We're going to spend Class 1 playing with Chrome Inspector and setting up your Github account!</p>
+        <a href="/class1" class="dsk-link">Required</a> 
         <a href="#" class="dsk-link">Extensions</a> 
       </div>
-      <img src="images/1.png" alt="" /> 
+      <img src="assets/images/timeline-thumbnails/day1.png" alt="" /> 
     </div>
   </div>
   <div class="step">
