class 1 routing and background

--- a/public/synergy.html
+++ b/public/synergy.html
@@ -40,7 +40,7 @@
       <div class="dsk-info">
         <h2>Class 1 -- Getting Started</h2>
         <p>We're going to spend Class 1 playing with Chrome Inspector and setting up your Github account!</p>
-        <a href="/class1" class="dsk-link">Required</a> 
+        <a href="/class1" class="dsk-link" target="_blank">Required</a> 
         <a href="#" class="dsk-link">Extensions</a> 
       </div>
       <img src="assets/images/timeline-thumbnails/day1.png" alt="" /> 
